--- a/duda.html
+++ b/duda.html
@@ -1,6 +1,6 @@
-<!DOCTYPE.html>
+<!DOCTYPE html>
 <html lang="en">
-  <head><!DOCTYPE html>
+  <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -13,3 +13,4 @@
     <script src="sketch.js"></script>
   </body>
 </html>
+
